chore: fixed minor issue

--- a/examples/next-app/app/globals.css
+++ b/examples/next-app/app/globals.css
@@ -1,4 +1,4 @@
-@import '@paalan/react-styled/styles.css';
+@import '@paalan/react-components/tailwind.css';
 
 @tailwind base;
 @tailwind components;
@@ -20,12 +20,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
