chore: update tailwind.css

--- a/packages/ui/src/tailwind.css
+++ b/packages/ui/src/tailwind.css
@@ -95,8 +95,14 @@
   * {
     @apply border-border;
   }
+  html {
+    scroll-behavior: smooth;
+  }
+  html, body {
+    @apply size-full;
+  }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground antialiased;
     font-feature-settings:
       'rlig' 1,
       'calt' 1;
