--- a/packages/ui/src/tailwind.css
+++ b/packages/ui/src/tailwind.css
@@ -98,11 +98,8 @@
   html {
     scroll-behavior: smooth;
   }
-  html, body {
-    @apply size-full;
-  }
   body {
-    @apply bg-background text-foreground antialiased;
+    @apply bg-background text-foreground antialiased size-full;
     font-feature-settings:
       'rlig' 1,
       'calt' 1;
