--- a/packages/ui/src/components/Toast/styles.css
+++ b/packages/ui/src/components/Toast/styles.css
@@ -150,6 +150,7 @@ html[dir='rtl'],
   font-weight: 500;
   line-height: 1.5;
   color: inherit;
+  margin-right: 16px;
 }
 
 [data-toast-toast] [data-icon] {
@@ -425,21 +426,21 @@ html[dir='rtl'],
   --normal-border: var(--gray4);
   --normal-text: var(--gray12);
 
-  --success-bg: hsl(var(--success-soft) / 0.4);
-  --success-border: hsl(var(--success-soft) / 0.6);
-  --success-text: hsl(var(--success));
+  --success-bg: hsl(143, 85%, 96%);
+  --success-border: hsl(145, 92%, 91%);
+  --success-text: hsl(140, 100%, 27%);
 
-  --danger-bg: hsl(var(--danger-soft) / 0.4);
-  --danger-border: hsl(var(--danger-soft) / 0.6);
-  --danger-text: hsl(var(--danger));
+  --info-bg: hsl(208, 100%, 97%);
+  --info-border: hsl(221, 91%, 91%);
+  --info-text: hsl(210, 92%, 45%);
 
-  --warning-bg: hsl(var(--warning-soft));
-  --warning-border: hsl(var(--warning-soft) / 0.6);
-  --warning-text: hsl(var(--warning));
+  --warning-bg: hsl(49, 100%, 97%);
+  --warning-border: hsl(49, 91%, 91%);
+  --warning-text: hsl(31, 92%, 45%);
 
-  --info-bg: hsl(var(--info-soft) / 0.4);
-  --info-border: hsl(var(--info-soft) / 0.6);
-  --info-text: hsl(var(--info));
+  --danger-bg: hsl(359, 100%, 97%);
+  --danger-border: hsl(359, 100%, 94%);
+  --danger-text: hsl(360, 100%, 45%);
 }
 
 [data-toast-toaster][data-theme='light'] [data-toast-toast][data-invert='true'] {
@@ -459,21 +460,21 @@ html[dir='rtl'],
   --normal-border: hsl(0, 0%, 20%);
   --normal-text: var(--gray1);
 
-  --success-bg: hsl(var(--success-soft) / 0.4);
-  --success-border: hsl(var(--success-soft) / 0.6);
-  --success-text: hsl(var(--success));
+  --success-bg: hsl(150, 100%, 6%);
+  --success-border: hsl(147, 100%, 12%);
+  --success-text: hsl(150, 86%, 65%);
 
-  --danger-bg: hsl(var(--danger-soft) / 0.4);
-  --danger-border: hsl(var(--danger-soft) / 0.6);
-  --danger-text: hsl(var(--danger));
+  --info-bg: hsl(215, 100%, 6%);
+  --info-border: hsl(223, 100%, 12%);
+  --info-text: hsl(216, 87%, 65%);
 
-  --warning-bg: hsl(var(--warning-soft));
-  --warning-border: hsl(var(--warning-soft) / 0.6);
-  --warning-text: hsl(var(--warning));
+  --warning-bg: hsl(64, 100%, 6%);
+  --warning-border: hsl(60, 100%, 12%);
+  --warning-text: hsl(46, 87%, 65%);
 
-  --info-bg: hsl(var(--info-soft) / 0.4);
-  --info-border: hsl(var(--info-soft) / 0.6);
-  --info-text: hsl(var(--info));
+  --danger-bg: hsl(358, 76%, 10%);
+  --danger-border: hsl(357, 89%, 16%);
+  --danger-text: hsl(358, 100%, 81%);
 }
 
 [data-rich-colors='true'] [data-toast-toast][data-type='success'] {
