--- a/packages/ui/src/tailwind.css
+++ b/packages/ui/src/tailwind.css
@@ -47,7 +47,7 @@
     --chart-5: 212 97% 87%;
   }
 
-  .dark {
+  .dark, [data-theme="dark"] {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
     --card: 222.2 84% 4.9%;
@@ -59,7 +59,7 @@
     --primary-soft: 228 96% 89%;
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
-    --secondary-soft: 220 13% 91%;
+    --secondary-soft: 220 2% 29%;
     --tertiary: 263.4 70% 50.4%;
     --tertiary-foreground: 210 20% 98%;
     --tertiary-soft: 250.5 95.24% 91.76%;
@@ -67,14 +67,14 @@
     --muted-foreground: 215 20.2% 65.1%;
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
-    --accent-soft: 220 13% 91%;
+    --accent-soft: 220 2% 29%;
     --info: 210 100% 70%;
     --info-foreground: 210 40% 98%;
     --info-soft: 213.33 96.92% 87.25%;
     --warning: 45 60% 32%;
     --warning-foreground: 210 40% 98%;
     --warning-soft: 48 100% 96.08%;
-    --success: 150 86% 65%;
+    --success: 140 100% 27%;
     --success-foreground: 210 40% 98%;
     --success-soft: 141 78.95% 85.1%;
     --danger: 0 74% 42%;
