--- a/packages/ui/src/tailwind.css
+++ b/packages/ui/src/tailwind.css
@@ -39,6 +39,7 @@
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 224.3 76.3% 48%;
+    --link: 217 91% 60%;
     --radius: 0.5rem;
     --chart-1: 221.2 83.2% 53.3%;
     --chart-2: 212 95% 68%;
@@ -83,6 +84,7 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 224.3 76.3% 48%;
+    --link: 217 91% 60%;
     --chart-1: 221.2 83.2% 53.3%;
     --chart-2: 212 95% 68%;
     --chart-3: 216 92% 60%;
