--- a/packages/ui/src/tailwind.css
+++ b/packages/ui/src/tailwind.css
@@ -39,7 +39,7 @@
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 224.3 76.3% 48%;
-    --link: 217 91% 60%;
+    --link: 203 98% 50%;
     --radius: 0.5rem;
     --chart-1: 221.2 83.2% 53.3%;
     --chart-2: 212 95% 68%;
@@ -48,7 +48,8 @@
     --chart-5: 212 97% 87%;
   }
 
-  .dark, [data-theme="dark"] {
+  .dark,
+  [data-theme='dark'] {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
     --card: 222.2 84% 4.9%;
@@ -84,7 +85,7 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 224.3 76.3% 48%;
-    --link: 217 91% 60%;
+    --link: 203 98% 50%;
     --chart-1: 221.2 83.2% 53.3%;
     --chart-2: 212 95% 68%;
     --chart-3: 216 92% 60%;
@@ -101,7 +102,7 @@
     scroll-behavior: smooth;
   }
   body {
-    @apply bg-background text-foreground antialiased size-full;
+    @apply size-full bg-background text-foreground antialiased;
     font-feature-settings:
       'rlig' 1,
       'calt' 1;
